Bug 1536618 Part 1 - Add Debugger.adoptSource(), r=jorendorff.

--HG--
extra : rebase_source : 4d25571e4af5289f820887ec022a5ccee4f914e5